# hello-world

./: .gitattributes  .gitignore  404.html  HelloVue.html  README.md  hashmap.json  hello-git.bat  hellogit.bat  hellogit.md  index.html  options.sh  package.json  pnpm-lock.yaml  pytest.ini  tsconfig.json
.github/: CNAME
.vitepress/: config.mts  nav.ts  sidebar.ts
Instance/: Instance.html
JavaScript/: index.html
Linux/: README.md  directory.sh
Node/: README.md  hello.js  package.json
TypeScript/: hello.ts
assets/: app.bWEQY1dG.js  backend_c.md.voarYRjk.lean.js  backend_cpp.md.Dh5X7s86.js  build_index.md.B7K-N5iK.js  data_index.md.feC9bT7E.js  data_mysql.md.DtVJdU7R.lean.js  data_redis.md.Bv1wAkdz.js  frontend_index.md.B78PYFaG.lean.js  frontend_js.md.DCyNdUG6.lean.js  index.md.iV9utSHW.lean.js  index.md.r9bNZYV7.lean.js  os_index.md.dEzU_giW.js  os_linux.md.BP6WmfNl.js  server_c.md.D3FWQU8-.lean.js  server_cpp.md.BoResjg6.js  server_index.md.BS0Ns-cW.js  server_java.md.B-HlCL64.lean.js  server_mybaits.md.BVw94QBz.lean.js  server_spring.md.CiMmz3Jc.js  style.c0npa6qF.css  web_index.md.iMSwdrje.js  web_js.md.DAe9pATO.js
backend/: c.html  cpp.html
c/: CMakeLists.txt
code/c/: CMakeLists.txt  main.c
code/c/files/: source_files.c
code/c/flies/: header_files.h  others.c
code/c/grammar/: array.c  comment.c  control.c  function.c  index.c  index.h  internal.c  operator.c  pointer.c  scope.c  struct.c  type.c  var.c
code/c/header/: test_header.c  test_header_run.c
code/c/utils/: index.h  test.c
commands/: branch.sh  checkout.sh  fetch.sh
(+471 files in other folders)
